trying to solve a bug when using on iphone

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -39,9 +39,6 @@
   border-radius: 3rem;
 }
 
-@media only screen and (max-device-width: 480px) and (orientation: portrait) {
-  /* iPhone portrait */
-}
 @media screen and (max-device-width: 960px), screen and (max-width: 960px) {
   .about-container {
     flex-direction: column;
@@ -72,12 +69,13 @@
     width: 100%;
   }
 }
-@media only screen and (max-device-width: 480px) and (orientation: landscape) {
+@media only screen and (max-device-width: 480px) and (orientation: portrait) {
   /* iPhone landscape */
   .about-container {
     flex-direction: column;
     padding: 0;
     height: auto;
+    color: red;
   }
   .about-desc {
     width: 90%;
